tests/invalid/VarDecl_Invalid_3.whiley
function f() -> int:
    int x = 010b
    return x
